templates update commit